--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL=postgres://postgres:Revelations6:8@localhost:5432/stringsdb
+DATABASE_URL=postgres://postgres:postgres@localhost:5432/database
 PORT=3000
 BODY_LIMIT_BYTES=262144
 RATE_LIMIT_WINDOW_MS=60000
