--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
   "migrate": "node src/db/migrate.js",
   "dev": "node --env-file=.env src/server.js",
-  "start": "node --env-file=.env src/server.js"
+  "start": "node src/server.js"
 },
   "keywords": [],
   "author": "",
